[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/sprites/1 Pink_Monster/Pink_Monster_Idle_4.png" type="Texture" id=1]
[ext_resource path="res://objects/Player.gd" type="Script" id=2]
[ext_resource path="res://objects/Inventory.gd" type="Script" id=3]
[ext_resource path="res://gui/InventoryItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/building-icons/barrel.png" type="Texture" id=5]
[ext_resource path="res://assets/building-icons/burning-embers.png" type="Texture" id=6]
[ext_resource path="res://assets/building-icons/claw-hammer.png" type="Texture" id=7]
[ext_resource path="res://gui/BuildingItem.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/building-icons/wolf-trap.png" type="Texture" id=9]
[ext_resource path="res://assets/building-icons/anvil-impact.png" type="Texture" id=10]
[ext_resource path="res://assets/building-icons/auto-repair.png" type="Texture" id=11]
[ext_resource path="res://assets/building-icons/wooden-sign.png" type="Texture" id=12]
[ext_resource path="res://assets/building-icons/water-mill.png" type="Texture" id=13]
[ext_resource path="res://assets/building-icons/swap-bag.png" type="Texture" id=14]
[ext_resource path="res://assets/building-icons/cardboard-box.png" type="Texture" id=15]
[ext_resource path="res://assets/Balsamiq_Sans/BalsamiqSans-Regular.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://assets/building-icons/campfire.png" type="Texture" id=17]
[ext_resource path="res://assets/building-icons/stone-wheel.png" type="Texture" id=18]
[ext_resource path="res://data/buildings/CraftingTable.tres" type="Resource" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 7.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 48.0

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.25098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="RectangleShape2D" id=7]

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 43
script = ExtResource( 2 )
hunger_rate = 1.0

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -7.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 4

[node name="InteractionReach" type="Area2D" parent="."]
position = Vector2( 0, -9 )
collision_layer = 0
collision_mask = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionReach"]
shape = SubResource( 2 )

[node name="BuildGui" type="Control" parent="."]
margin_top = -24.0
margin_bottom = -24.0

[node name="Tabs" type="TabContainer" parent="BuildGui"]
margin_top = -24.0
grow_horizontal = 2
custom_styles/panel = SubResource( 5 )
tabs_visible = false

[node name="Categories" type="HBoxContainer" parent="BuildGui/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
custom_constants/separation = 4
alignment = 1

[node name="Survival" type="Panel" parent="BuildGui/Tabs/Categories"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/panel = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="BuildGui/Tabs/Categories/Survival"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Storage" type="Panel" parent="BuildGui/Tabs/Categories"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/panel = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="BuildGui/Tabs/Categories/Storage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Structure" type="Panel" parent="BuildGui/Tabs/Categories"]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/panel = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="BuildGui/Tabs/Categories/Structure"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Technology" type="Panel" parent="BuildGui/Tabs/Categories"]
margin_left = 84.0
margin_right = 108.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/panel = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="BuildGui/Tabs/Categories/Technology"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Survival" type="HBoxContainer" parent="BuildGui/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
custom_constants/separation = 4
alignment = 1

[node name="Campfire" parent="BuildGui/Tabs/Survival" instance=ExtResource( 8 )]

[node name="TextureRect" parent="BuildGui/Tabs/Survival/Campfire" index="0"]
texture = ExtResource( 17 )

[node name="Snare" parent="BuildGui/Tabs/Survival" instance=ExtResource( 8 )]
margin_left = 28.0
margin_right = 52.0

[node name="TextureRect" parent="BuildGui/Tabs/Survival/Snare" index="0"]
texture = ExtResource( 9 )

[node name="CraftingTable" parent="BuildGui/Tabs/Survival" instance=ExtResource( 8 )]
margin_left = 56.0
margin_right = 80.0
building = ExtResource( 19 )

[node name="TextureRect" parent="BuildGui/Tabs/Survival/CraftingTable" index="0"]
texture = ExtResource( 10 )

[node name="Storage" type="HBoxContainer" parent="BuildGui/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
custom_constants/separation = 4
alignment = 1

[node name="Sack" parent="BuildGui/Tabs/Storage" instance=ExtResource( 8 )]

[node name="TextureRect" parent="BuildGui/Tabs/Storage/Sack" index="0"]
texture = ExtResource( 14 )

[node name="Crate" parent="BuildGui/Tabs/Storage" instance=ExtResource( 8 )]

[node name="TextureRect" parent="BuildGui/Tabs/Storage/Crate" index="0"]
texture = ExtResource( 15 )

[node name="Structure" type="HBoxContainer" parent="BuildGui/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
custom_constants/separation = 4
alignment = 1

[node name="Signpost" parent="BuildGui/Tabs/Structure" instance=ExtResource( 8 )]

[node name="TextureRect" parent="BuildGui/Tabs/Structure/Signpost" index="0"]
texture = ExtResource( 12 )

[node name="Technology" type="HBoxContainer" parent="BuildGui/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
custom_constants/separation = 4
alignment = 1

[node name="Water Wheel" parent="BuildGui/Tabs/Technology" instance=ExtResource( 8 )]

[node name="TextureRect" parent="BuildGui/Tabs/Technology/Water Wheel" index="0"]
texture = ExtResource( 13 )

[node name="Mill" parent="BuildGui/Tabs/Technology" instance=ExtResource( 8 )]

[node name="TextureRect" parent="BuildGui/Tabs/Technology/Mill" index="0"]
texture = ExtResource( 18 )

[node name="Info" type="Label" parent="BuildGui"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "Survival"

[node name="Selection" type="Panel" parent="BuildGui"]
margin_left = -54.0
margin_top = -24.0
margin_right = -30.0
grow_horizontal = 2
grow_vertical = 0
custom_styles/panel = SubResource( 4 )

[node name="Pivot" type="Node2D" parent="."]
position = Vector2( 0, -8 )

[node name="BuildBlueprint" type="Sprite" parent="Pivot"]
modulate = Color( 0.694118, 0.188235, 0.188235, 0.501961 )
position = Vector2( 32, 0 )

[node name="Area2D" type="Area2D" parent="Pivot/BuildBlueprint"]
collision_layer = 128
collision_mask = 411

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/BuildBlueprint/Area2D"]
shape = SubResource( 7 )

[node name="InventoryGui" type="Control" parent="."]
margin_left = -12.0
margin_top = -48.0
margin_right = 12.0
margin_bottom = -24.0

[node name="Panel" type="Panel" parent="InventoryGui"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="CurrentItem" parent="InventoryGui" instance=ExtResource( 4 )]
margin_right = -72.0
margin_bottom = 0.0

[node name="Info" type="Label" parent="InventoryGui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -32.0
margin_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 6 )

[node name="HungerTween" type="Tween" parent="."]

[connection signal="item_added" from="Inventory" to="." method="_item_added"]

[editable path="BuildGui/Tabs/Survival/Campfire"]
[editable path="BuildGui/Tabs/Survival/Snare"]
[editable path="BuildGui/Tabs/Survival/CraftingTable"]
[editable path="BuildGui/Tabs/Storage/Sack"]
[editable path="BuildGui/Tabs/Storage/Crate"]
[editable path="BuildGui/Tabs/Structure/Signpost"]
[editable path="BuildGui/Tabs/Technology/Water Wheel"]
[editable path="BuildGui/Tabs/Technology/Mill"]
